# name: TestUpdate.test[uvloop]
  <class 'dict'> {
    'id': 'musicians',
    'name': 'Technicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'fcarpenter',
        'id': 'fb085f7f',
      },
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'chelsea34',
        'id': '7cf872dc',
      },
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'michelle34',
        'id': '3cbb22cc',
      },
    ],
  }
---
# name: TestUpdate.test[uvloop][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'handle': 'bob',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'bf1b993c',
      'handle': 'qtaylor',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'fb085f7f',
      'handle': 'fcarpenter',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'handle': 'chelsea34',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'handle': 'michelle34',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
# name: TestUpdate.test_not_found[uvloop][json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_create[uvloop-201][json]
  <class 'dict'> {
    'id': 'test',
    'name': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_create[uvloop-201][location]
  'https://virtool.example.com/groups/test'
---
# name: test_create[uvloop-400][json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Group already exists',
  }
---
# name: test_create[uvloop-400][location]
  None
---
# name: test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'id': 'musicians',
      'name': 'musicians',
    },
    <class 'dict'> {
      'id': 'hydrogeologists',
      'name': 'hydrogeologists',
    },
  ]
---
# name: test_get[uvloop-200]
  <class 'dict'> {
    'id': 'musicians',
    'name': 'musicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'qtaylor',
        'id': 'bf1b993c',
      },
    ],
  }
---
# name: test_get[uvloop-404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[uvloop-204][json]
  None
---
# name: test_remove[uvloop-204][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'bf1b993c',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': 'fb085f7f',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
# name: test_remove[uvloop-404][json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'bf1b993c',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': True,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': 'fb085f7f',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': True,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
